# DeepResearcher

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_all.bat  run_backend.bat  run_frontend.bat
backend/: __init__.py  main.py  pytest.ini
backend/agents/: __init__.py  base.py  experiment_design.py  imrad_structure.py  journal_writing.py  literature_evaluation.py  literature_search.py  literature_searcher.py  paper_writing.py  pdf_summary.py  research_discussion.py
backend/api/routes/: auth.py  literature.py  literature_search.py  research.py  websocket.py
backend/auth/: __init__.py  oauth.py  token_manager.py
backend/config/: __init__.py  settings.py
backend/llm/: __init__.py  gemini.py
backend/orchestrator/: __init__.py  state.py  workflow.py
backend/storage/: __init__.py  paper_files.py  project_store.py
backend/tests/: __init__.py  conftest.py  test_api_literature.py  test_api_paper_writing.py  test_api_v3.py  test_state_v3.py
backend/tests/tools/: test_arxiv_search.py  test_google_scholar.py  test_semantic_scholar.py
backend/tools/: __init__.py  arxiv_search.py  citation_formatter.py  google_scholar.py  pdf_processor.py  semantic_scholar.py
backend/utils/: __init__.py  prompt_loader.py
data/prompts/: README.md
data/prompts/ED/: initial_artifact.md  system_prompt.md
data/prompts/LR/: evaluation_prompt.md
data/security.example/: README.md  api_keys.json  google_oauth.json
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  (+1 more)
(+25 files in other folders)
