[tool.poetry]
name = "deep-researcher"
version = "0.1.0"
description = "Research Orchestration Multi-Agent System with Antigravity OAuth"
authors = ["DeepResearcher Team"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core Framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"

# LangChain & AI
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langgraph = "^0.2.0"

# HTTP & OAuth
httpx = "^0.27.0"
authlib = "^1.3.0"
aiofiles = "^24.1.0"

# Semantic Scholar
semanticscholar = "^0.8.0"

# PDF Processing
pymupdf = "^1.24.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"

# Utilities
python-dotenv = "^1.0.0"
structlog = "^24.4.0"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
